--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -6,3 +6,29 @@
   font-weight: 300;
   line-height: 40px;
 }
+.contact__container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  margin-top: 50px;
+  align-items: center;
+  flex-direction: column;
+  padding: 25px;
+}
+.contact__map {
+  width: 70%;
+  height: auto;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+.map {
+  width: 100%;
+}
+.contact__lh {
+  width: 100%;
+}
